[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.47", features = ["derive"] }
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
kanal = "0.1.1"
memchr = "2.7.5"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
uuid = { version = "1.17.0", features = ["v4"] }
